Update document language from German to English.

--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech-Evangelismus - Das Portal für Technologie-Enthusiasten</title>
+    <title>Tech Evangelism - The Portal for Technology Enthusiasts</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Willkommen im Tech-Evangelismus Portal</h1>
+        <h1>Welcome to the Tech Evangelism Portal</h1>
         <nav>
             <ul>
-                <li><a href="#artikel">Artikel</a></li>
-                <li><a href="#webinare">Webinare</a></li>
+                <li><a href="#artikel">Articles</a></li>
+                <li><a href="#webinare">Webinars</a></li>
                 <li><a href="#forum">Forum</a></li>
-                <li><a href="#ressourcen">Ressourcen</a></li>
+                <li><a href="#ressourcen">Resources</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="artikel">
-            <h2>Artikel und Blogs</h2>
-            <p>Lesen Sie die neuesten Artikel über Technologien.</p>
+            <h2>Articles and Blogs</h2>
+            <p>Read the latest articles about technologies.</p>
         </section>
         <section id="webinare">
-            <h2>Webinare und Workshops</h2>
-            <p>Informieren Sie sich über bevorstehende Veranstaltungen.</p>
+            <h2>Webinars and Workshops</h2>
+            <p>Learn about upcoming events.</p>
         </section>
         <section id="forum">
-            <h2>Community-Forum</h2>
-            <p>Treten Sie unserer Community bei und diskutieren Sie mit.</p>
+            <h2>Community Forum</h2>
+            <p>Join our community and engage in discussions.</p>
         </section>
         <section id="ressourcen">
-            <h2>Ressourcen-Bibliothek</h2>
-            <p>Greifen Sie auf wertvolle Bildungsressourcen zu.</p>
+            <h2>Resource Library</h2>
+            <p>Access valuable educational resources.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Tech-Evangelismus Portal</p>
+        <p>&copy; 2024 Tech Evangelism Portal</p>
     </footer>
 </body>
 </html>
